# SoftwareRasterizer

./: .gitignore  CMakeLists.txt  README.md
include/: Framebuffer.h  Matrix4.h  Mesh.h  Vector3.h
src/: Framebuffer.cpp  main.cpp
